# cpp-sample-project

./: CMakeLists.txt  README.md  anothefile.cpp  anothefile.h  examples.h  examples_arrays.cpp  examples_base64.cpp  examples_branches.cpp  examples_containers.cpp  examples_enums.cpp  examples_exceptions.cpp  examples_functional.cpp  examples_functions.cpp  examples_literals.cpp  examples_loops.cpp  examples_namespaces.cpp  examples_oop.cpp  examples_pointers.cpp  examples_preprocessor.cpp  examples_simple_datatypes.cpp  examples_smart_ptr.cpp  examples_struct.cpp  examples_templates.cpp  examples_threads.cpp  main  main.cpp  test.erl  test.py  test1.cpp  test2.cpp  todo.md
